# goose

./: CMakeLists.txt
include/: config.hpp  game.hpp  input_manager.hpp
res/: option.glade  option.glade~
src/: config.cpp  err_msg.cpp  game.cpp  input_manager.cpp  list.txt  main.cpp  option.cpp
